--- a/back_end/package.json
+++ b/back_end/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "back_end",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "dependencies": {
-    "typescript": "^5.9.3"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.ts",
+    "scripts": {
+        "start": "node ./dist/index.js",
+        "build": "tsc",
+        "dev": "tsx src/index.ts",
+        "generate": "drizzle-kit generate",
+        "push": "drizzle-kit push"
+    },
+    "type": "module",
+    "dependencies": {
+        "cors": "^2.8.6",
+        "dotenv": "^17.2.4",
+        "drizzle-orm": "^0.45.1",
+        "express": "^5.2.1",
+        "postgres": "^3.4.8"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.6",
+        "@types/node": "^25.2.1",
+        "drizzle-kit": "^0.31.8",
+        "tsx": "^4.21.0",
+        "typescript": "^5.9.3"
+    }
 }
