--- a/back_end/package.json
+++ b/back_end/package.json
@@ -16,11 +16,13 @@
         "dotenv": "^17.2.4",
         "drizzle-orm": "^0.45.1",
         "express": "^5.2.1",
+        "jsonwebtoken": "^9.0.3",
         "postgres": "^3.4.8"
     },
     "devDependencies": {
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^25.2.1",
         "drizzle-kit": "^0.31.8",
         "tsx": "^4.21.0",
