--- a/back_end/package.json
+++ b/back_end/package.json
@@ -24,6 +24,7 @@
         "@types/bcrypt": "^6.0.0",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^25.2.1",
         "drizzle-kit": "^0.31.8",
         "tsx": "^4.21.0",
