--- a/back_end/package.json
+++ b/back_end/package.json
@@ -12,6 +12,7 @@
     },
     "type": "module",
     "dependencies": {
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.6",
         "dotenv": "^17.2.4",
         "drizzle-orm": "^0.45.1",
@@ -20,6 +21,7 @@
         "postgres": "^3.4.8"
     },
     "devDependencies": {
+        "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.6",
         "@types/jsonwebtoken": "^9.0.10",
