--- a/back_end/package.json
+++ b/back_end/package.json
@@ -18,6 +18,7 @@
         "dotenv": "^17.2.4",
         "drizzle-orm": "^0.45.1",
         "express": "^5.2.1",
+        "jsonwebtoken": "^9.0.3",
         "postgres": "^3.4.8",
         "zod": "^4.3.6"
     },
